@@ -1,9 +1,18 @@
 Unreleased
+  * INCOMPATIBILITY WARNING:
+    fping and fping6 are now unified into one binary. This means that for
+    example doing 'fping www.google.com' is going to ping the IPv6 IP of
+    www.google.com on IPv6-enabled hosts. If you need exact compatibility with 
+    old versions, you can:
+    - compile fping with --disable-ipv6 (or use a wrapper, and call 'fping -4')
+    - compile fping with --enable-ipv6 and rename it to fping6 (same as 'fping -6')
+
   * (feature) Unified 'fping' and 'fping6' into one binary
   * (feature) New option '-4' to force IPv4
   * (feature) New option '-6' to force IPv6
   * (feature) Support kernel-timestamping of received packets (#46)
   * (feature) Simplify restrictions: only -i >= 1 and -p >= 10 are enforced now
+  * (feature) --enable-ipv6 is now default (you can use --disable-ipv6 to disable IPv6 support)
   * (bugfix) Fix option -m to return all IPs of a hostname
   * (bugfix) Fix option -H (ttl) for IPv6
   * (bugfix) Fix option -M (don't fragment) for IPv6
